# mashpad

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: Mashup Compatibility Tool Taxonomy.md  compatibility-verdict.md  decision-log.md  design-memo-analyzer-provenance-contract.md  design-memo-genre-contrast-role-gating.md  design-memo-skyfall-construction-case.md  eval-plan.md  experiment-joint-registration-features.md  fixture-planning-matrix.md  mashup-move-taxonomy.md  tempo-eval.md
fixtures/: README.md
scripts/: audition_registrations.py  audition_workbench.py  eval_tempo.py  import_labels.py  probe_registration_features.py  propose_construction.py  ranking_report.py  stem_probe.py  trajectory_probe.py
src/mashpad/: __init__.py  cli.py  models.py  overrides.py  tempo_eval.py
src/mashpad/analysis/: __init__.py  harmony.py  sections.py  stems.py  (+3 more)
tests/: test_annotation_import.py  test_arrangement_contrast_score.py  test_audition.py  test_candidate_score.py  test_cli.py  test_collision_score.py  test_composite_score.py  test_construction_case.py  test_discovery.py  test_evaluate_move.py  test_evaluation.py  test_evaluation_corpus.py  test_harmonic_score.py  test_joint_features.py  test_models.py  test_move_abstention.py  test_overrides.py  test_phrase_score.py  test_provenance_contract.py  test_registration_corpus.py  test_stems.py  test_tempo_backend.py  test_tempo_candidates.py  test_tempo_eval.py  test_tempo_score.py  test_trajectories.py  test_verdict.py  test_wav_tempo_probe.py  test_workbench.py
tests/fixtures/: audio_index.example.json  construction_skyfall_in_the_end.json  evaluation_corpus.example.json  registration_corpus_v1.json  timeline_skyfall_in_the_end.json  track_a.json  track_b.json
(+23 files in other folders)
