[project]
name = "mashpad"
version = "0.1.0"
description = "Local-first mashup compatibility workbench (prototype)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
mashcheck = "mashpad.cli:main"

[project.optional-dependencies]
# Optional external tempo backend only. NOT installed by default and NOT a
# core dependency: `mashcheck`/`analyze_track` stay stubbed and stdlib-only
# without it. Enable with `uv sync --extra tempo-librosa`; the backend is
# imported lazily (see mashpad.analysis.tempo_backend.LibrosaTempoBackend).
tempo-librosa = ["librosa>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mashpad"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
